--- a/review-web-1/stylesheet/styles.css
+++ b/review-web-1/stylesheet/styles.css
@@ -23,6 +23,10 @@ body {
     text-align: center;
 }
 
+h1 {
+    color: crimson;
+}
+
 .header-image {
     background-image: url("../images/cool-image-1.jpg");
         width: 450px;
